<resources>
	<string name="app_name" translatable="false">Filelug</string>
	<string name="intent_save_to_filelug">Save to Filelug</string>
	<string name="intent_open_from_filelug">Open from Filelug</string>
	<string name="drawer_section_main_task">MAIN TASK</string>
	<string name="drawer_section_download">DOWNLOAD</string>
	<string name="drawer_title_download_file">Download File</string>
	<string name="drawer_title_downloaded_files_history">Downloaded Files History</string>
	<string name="drawer_section_upload">UPLOAD</string>
	<string name="drawer_title_upload_file">Upload File</string>
	<string name="drawer_title_uploaded_files_history">Uploaded Files History</string>
	<string name="drawer_section_browse">BROWSE</string>
	<string name="drawer_title_browse_remote_root_folder">Remote Folder</string>
	<string name="drawer_title_browse_local_folder">Local Folder</string>
	<string name="drawer_title_bookmark">Bookmark</string>
	<string name="drawer_section_others">OTHERS</string>
	<string name="drawer_title_settings">Settings</string>
	<string name="drawer_account_section_account_and_computer">ACCOUNT AND COMPUTER</string>
	<string name="drawer_account_title_current_account">Current Account</string>
	<string name="drawer_account_title_login">Login</string>
	<string name="drawer_account_title_current_computer">Current Computer</string>
	<string name="drawer_account_title_change_nickname">Nickname</string>
	<string name="drawer_account_title_change_email">E-mail Address</string>
	<string name="drawer_account_title_change_password">Password</string>
	<string name="drawer_account_section_connect_to_others">OTHER ACCOUNTS</string>
	<string name="drawer_account_title_login_with_another_account">Login With Another Account</string>
	<string name="drawer_account_title_getting_started">Getting Started with Filelug</string>
	<string name="drawer_account_title_change_computer_name">Change Computer Name</string>
	<string name="drawer_account_title_manage_current_account">Manage Current Account</string>
	<string name="drawer_account_title_manage_current_computer">Manage Current Computer</string>
	<string name="drawer_open">Open navigation drawer</string>
	<string name="drawer_close">Close navigation drawer</string>
	<string name="label_phone_number">Phone Number</string>
	<string name="label_nickname">Nickname</string>
	<string name="label_email_address">E-mail Address</string>
	<string name="label_connected_computer">Connected Computer</string>
	<string name="label_verify_code">Enter security code here.</string>
	<string name="label_current_nickname">Current Nickname</string>
	<string name="label_change_to">Change To</string>
	<string name="label_current_email_address">Current E-mail Address</string>
	<string name="label_new_email_address">New E-mail Address</string>
	<string name="label_connect_to_computer">Connect To Computer</string>
	<string name="label_current_country_region">Current Country/Region</string>
	<string name="label_choose_computer_name">Choose Computer Name</string>
	<string name="label_choose_account">Choose Account</string>
	<string name="label_other">Other</string>
	<string name="label_files_to_upload">Files To Upload</string>
	<string name="label_upload_to_folder">To Folder</string>
	<string name="label_subfolder_type">Subfolder Name to Create</string>
	<string name="label_upload_description_type">Description</string>
	<string name="label_upload_notification_type">Notification</string>
	<string name="label_files_to_download">Files To Download</string>
	<string name="label_download_to_folder">To Folder</string>
	<string name="label_download_description_type">Description</string>
	<string name="label_download_notification_type">Notification</string>
	<string name="label_current_account">Current Account</string>
	<string name="label_login_to_new_account">Login To New Account</string>
	<string name="label_pref_category_display_settings">Display Settings</string>
	<string name="label_pref_category_security_settings">Security Settings</string>
	<string name="label_pref_category_others">Others</string>
	<string name="label_pref_category_account_profile">Profiles</string>
	<string name="label_pref_category_history">History</string>
	<string name="label_pref_category_computer_profile">Profiles</string>
	<string name="label_pref_category_upload_settings">Upload File</string>
	<string name="label_pref_category_download_settings">Download File</string>
	<string name="label_pref_category_deletion">Delete</string>
	<string name="label_pref_show_hidden_files">Show Hidden Files</string>
	<string name="label_pref_show_local_system_folder">Show Local System Folder</string>
	<string name="label_pref_show_thumbnail">Show Thumbnails</string>
	<string name="label_pref_show_modified_date_and_permission">Show Date &#38; Permission</string>
	<string name="label_pref_remember_recent_folder">Note The Last Folder Browsed</string>
	<string name="label_pref_display_language">Display Language</string>
	<string name="label_pref_app_open_password">App Open Protection</string>
	<string name="label_pref_transfer_password">File Upload &#38; Download Protection</string>
	<string name="label_pref_file_open_password">File Open Protection</string>
	<string name="label_pref_upload_path">Upload To Folder</string>
	<string name="label_pref_download_path">Download To Folder</string>
	<string name="label_pref_getting_started">Getting Started with Filelug</string>
	<string name="label_pref_rate_us_on_google_play">Rate Us On Google Play</string>
	<string name="label_pref_share_app_to_friends">Share App To Friends</string>
	<string name="label_pref_frequently_asked_questions">FAQ</string>
	<string name="label_pref_send_feedback">Send Feedback</string>
	<string name="label_pref_terms_of_service">Terms Of Service</string>
	<string name="label_pref_privacy_policy">Privacy Policy</string>
	<string name="label_pref_third_party_notice">Open Source &#38; 3rd Party Software</string>
	<string name="label_pref_about">About Filelug</string>
	<string name="label_pref_delete_account">Delete Account</string>
	<string name="label_pref_delete_computer">Delete Computer</string>
	<string name="label_pref_delete_local_cached_data">Delete Local Cached Data</string>
	<string name="label_save_as_default">Save as default</string>
	<string name="label_transfer_group_section_1_file">(1 File)</string>
	<string name="label_transfer_group_section_many_files">(%1$d Files)</string>
	<string name="label_download_info">Download Information</string>
	<string name="label_source_file_info">Source File Information</string>
	<string name="label_download_summary_info">Download Summary Information</string>
	<string name="label_file_name">File Name</string>
	<string name="label_download_status">Download Status</string>
	<string name="label_start_download_timestamp">Start Download Timestamp</string>
	<string name="label_end_download_timestamp">End Download Timestamp</string>
	<string name="label_download_from_computer">Download From Computer</string>
	<string name="label_source_file_path">Source File Path</string>
	<string name="label_real_source_file_path">Real Source File Path</string>
	<string name="label_content_type">Content Type</string>
	<string name="label_file_downloaded_size">Downloaded Size</string>
	<string name="label_upload_info">Upload Information</string>
	<string name="label_upload_summary_info">Upload Summary Information</string>
	<string name="label_upload_status">Upload Status</string>
	<string name="label_start_upload_timestamp">Start Upload Timestamp</string>
	<string name="label_end_upload_timestamp">End Upload Timestamp</string>
	<string name="label_upload_to_computer">Upload To Computer</string>
	<string name="label_file_uploaded_size">Uploaded Size</string>
	<string name="label_add_computer_step_1_install">①INSTALL</string>
	<string name="label_add_computer_step_2_startup">②STARTUP</string>
	<string name="label_add_computer_step_3_scan">③SCAN</string>
	<string name="label_current_computer_name">Current Computer Name</string>
	<string name="label_computer_to_delete">Computer To Delete</string>
	<string name="label_choose_computer_to_delete">Choose Computer To Delete</string>
	<string name="label_computer_name">Computer Name</string>
	<string name="label_downloaded_files_history">Downloaded Files History</string>
	<string name="label_uploaded_files_history">Uploaded Files History</string>
	<string name="btn_label_send">SEND</string>
	<string name="btn_label_verify">VERIFY</string>
	<string name="btn_label_connect">CONNECT</string>
	<string name="btn_label_change">CHANGE</string>
	<string name="btn_label_send_me_security_code">SEND ME SECURITY CODE</string>
	<string name="btn_label_reset">RESET</string>
	<string name="btn_label_choose">CHOOSE</string>
	<string name="btn_label_cancel">CANCEL</string>
	<string name="btn_label_delete_account_from_device">DELETE FROM DEVICE</string>
	<string name="btn_label_delete_account_from_remote_and_device">DELETE FROM REMOTE &#38; DEVICE</string>
	<string name="btn_label_delete">DELETE</string>
	<string name="btn_label_reload">Reload</string>
	<string name="btn_label_loading">Loading...</string>
	<string name="btn_label_skip">SKIP</string>
	<string name="btn_label_done">DONE</string>
	<string name="btn_label_sign_in">Sign In</string>
	<string name="btn_label_init_getting_started">Getting Started with Filelug</string>
	<string name="btn_label_go_to_settings">Go to SETTINGS</string>
	<string name="btn_label_deny">Deny</string>
	<string name="btn_label_yes_deny">Yes, deny</string>
	<string name="btn_label_no_try_again">Try again</string>
	<string name="btn_label_transfer_choose_file">Choose File</string>
	<string name="btn_label_stop_all_uploads">Stop All Uploads</string>
	<string name="btn_label_stop_all_downloads">Stop All Downloads</string>
	<string name="page_change_computer_name_message_1">Please enter new computer name, then press \"CHANGE\" to change the computer name.</string>
	<string name="page_delete_computer_message_1">Please select a computer you want to delete, then press \"DELETE\" to delete the remote computer.</string>
	<string name="message_processing">Processing</string>
	<string name="message_done">Done</string>
	<string name="message_failed">Failed</string>
	<string name="permission_group_contacts">Contacts</string>
	<string name="permission_group_storage">Storage</string>
	<string name="permission_group_sms">SMS</string>
	<string name="permission_group_camera">Camera</string>
	<string name="permission_desc_contacts">If this permission is granted, the App will only manage Filelug account. It does not access other account data.</string>
	<string name="permission_desc_storage">If this permission is granted, App can upload the files (read the device\'s photos, music, videos, documents) to the remote computer, or download files from the remote computer (saved to the device).</string>
	<string name="permission_desc_sms">If this permission is granted, App can automatically entered in verification code after the SMS received.</string>
	<string name="permission_desc_camera">If this permission is granted, the App will only use the camera to scan the QR code displayed on your computer when you perform \"ADD NEW COMPUTER\".</string>
	<string name="permission_warning_description">If not granted, the App will not work.</string>
	<string name="permission_warning_description_sms">If this permission is not granted, you can enter manually after receiving the SMS verification code.</string>
	<string name="permission_warning_description_camera">If this permission is not granted, the App will not be able to connect to the new computer with \"ADD NEW COMPUTER\".</string>
	<string name="permission_not_granted">Not Granted</string>
	<string name="action_select_all">Select All</string>
	<string name="action_invert_selection">Invert Selection</string>
	<string name="action_details">Details</string>
	<string name="action_open_file">Open</string>
</resources>