<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_select_all"
		android:title="@string/action_select_all"
		android:icon="@drawable/ic_action_select_all"
		app:showAsAction="ifRoom"/>
		<!--app:showAsAction="ifRoom|withText"-->

	<item
		android:id="@+id/action_invert_selection"
		android:title="@string/action_invert_selection"
		android:icon="@drawable/ic_action_invert_selection"
		app:showAsAction="never"/>

	<item android:id="@+id/action_open_file"
		  android:title="@string/action_open_file"
		  android:icon="@drawable/ic_action_open_file"
		  app:showAsAction="never"/>

	<item android:id="@+id/action_details"
		  android:title="@string/action_details"
		  android:icon="@drawable/ic_action_details"
		  app:showAsAction="never"/>

	<!--<item android:id="@+id/action_share"-->
	<!--android:title="@string/action_share"-->
	<!--android:icon="@drawable/ic_action_share"-->
	<!--app:showAsAction="ifRoom"/>-->

	<!--<item android:id="@+id/action_move_to"-->
	<!--android:title="@string/action_move_to"-->
	<!--android:icon="@drawable/ic_action_move_to"-->
	<!--app:showAsAction="never"/>-->

	<!--<item android:id="@+id/action_copy_to"-->
	<!--android:title="@string/action_copy_to"-->
	<!--android:icon="@drawable/ic_action_copy_to"-->
	<!--app:showAsAction="never"/>-->

	<!--<item android:id="@+id/action_archieve"-->
	<!--android:title="@string/action_archieve"-->
	<!--android:icon="@drawable/ic_action_archieve"-->
	<!--app:showAsAction="never"/>-->

	<!--<item android:id="@+id/action_rename"-->
	<!--android:title="@string/action_rename"-->
	<!--android:icon="@drawable/ic_action_rename"-->
	<!--app:showAsAction="never"/>-->

	<!--<item android:id="@+id/action_bookmark"-->
	<!--android:title="@string/action_bookmark"-->
	<!--android:icon="@drawable/ic_action_bookmark"-->
	<!--app:showAsAction="ifRoom|withText"/>-->

</menu>
