<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?colorPrimary"
	android:fitsSystemWindows="true">

	<RelativeLayout
		android:id="@+id/layout_toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<include
			android:id="@+id/toolbar_actionbar"
			layout="@layout/toolbar_off"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

	</RelativeLayout>

	<ScrollView
		android:id="@+id/layout_content"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/layout_toolbar"
		android:background="?android:windowBackground">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:orientation="vertical" >

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="@dimen/layout_header_image_height"
				android:orientation="vertical"
				android:background="?colorPrimary"
				android:gravity="center"
				android:elevation="@dimen/toolbar_elevation">

				<ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/header_ic_delete_computer"
                    tools:ignore="ContentDescription"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:orientation="vertical"
				android:padding="@dimen/keyline_2">

				<com.filelug.android.ui.widget.RobotoTextView
					style="@style/TextViewAppearance.Body1"
					android:text="@string/page_delete_computer_message_1" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/keyline_1"
					android:gravity="center_vertical" >

					<ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/menu_ic_computer"
                        tools:ignore="ContentDescription"/>

					<LinearLayout
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_marginLeft="@dimen/keyline_1"
						android:layout_weight="1"
						android:orientation="vertical">

						<com.marvinlabs.widget.floatinglabel.edittext.FloatingLabelEditText
							android:id="@+id/etConnectedComputer"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:inputType="textNoSuggestions"
							android:imeOptions="actionNext"
							app:flw_labelText="@string/label_connected_computer"
							app:flw_labelTextColor="@color/main_color_500"
							app:flw_labelTextSize="16sp"
							app:flw_inputWidgetTextColor="@color/main_color_grey_900"
							app:flw_inputWidgetTextSize="18sp"
							app:flw_floatOnFocus="false" />

						<com.marvinlabs.widget.floatinglabel.itempicker.FloatingLabelItemPicker
							android:id="@+id/ipComputerToDelete"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							app:flw_labelText="@string/label_computer_to_delete"
							app:flw_labelTextColor="@color/main_color_500"
							app:flw_labelTextSize="@dimen/flw_label_text_size"
							app:flw_inputWidgetTextColor="@color/main_color_grey_900"
							app:flw_inputWidgetTextSize="@dimen/flw_input_text_size"
							app:flw_floatOnFocus="false" />

					</LinearLayout>

				</LinearLayout>

				<com.filelug.android.ui.widget.RippleLayout
					style="@style/RippleStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/keyline_2"
					app:rippleColor="@color/main_color_grey_400" >

					<com.dd.processbutton.iml.ActionProcessButton
						android:id="@+id/btnDelete"
						android:layout_width="wrap_content"
						android:layout_height="40dp"
						android:layout_margin="0dp"
						android:minWidth="@dimen/button_min_width"
						android:text="@string/btn_label_delete"
						android:textColor="@color/white"
						android:textSize="14sp"
						app:pb_colorComplete="@color/material_grey_500"
						app:pb_colorNormal="?colorPrimary"
						app:pb_colorPressed="?colorPrimary"
						app:pb_colorProgress="@color/white"
						app:pb_textComplete="@string/message_done"
						app:pb_textProgress="@string/message_processing"
						app:pb_textError="@string/message_failed"/>

				</com.filelug.android.ui.widget.RippleLayout>

			</LinearLayout>

		</LinearLayout>

	</ScrollView>

</RelativeLayout>
